--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <style>
     body {
-        background-color: #000000;  /* Sfondo nero */
+        background-color: #121212;  /* Sfondo principale molto scuro */
         color: #ffffff;              /* Testo bianco */
     }
     header {
@@ -14,22 +14,38 @@ layout: default
         color: #58a6ff;             /* Colore dei link */
     }
     .news-item {
-        background: #222222;        /* Colore di sfondo per gli articoli */
-        border-bottom: 1px solid #ccc;
+        background: #1E1E1E;        /* Colore di sfondo per gli articoli, leggermente più chiaro dello sfondo principale */
+        border-bottom: 1px solid #444;
+        margin-bottom: 20px;
+        padding: 15px;
+        border-radius: 5px;
     }
     .source {
         color: #999999;             /* Colore del testo per la fonte */
     }
     #date-selector-container {
         margin-bottom: 20px;
+        background-color: #1E1E1E;
+        padding: 10px;
+        border-radius: 5px;
+    }
+    #date-selector {
+        background-color: #333333;
+        color: #FFFFFF;
+        border: 1px solid #555555;
     }
     #main-content {
         max-width: 800px;
         margin: 0 auto;
         padding: 20px;
+        background-color: #121212; /* Stesso colore dello sfondo principale */
     }
     .footer-disclaimer, .footer-credit {
         color: #ffffff;
+        background-color: #1E1E1E;
+        padding: 10px;
+        border-radius: 5px;
+        margin-top: 20px;
     }
 </style>
 
